--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
 </head>
 <body>
   <h1>Olá mundo! eu sou o Luiz!</h1>
-  <a href="/sobre.html"><button>Ir para página sobre</button></a>
+  <a href="sobre.html"><button>Ir para página sobre</button></a>
 </body>
 </html>
