--- a/sobre.html
+++ b/sobre.html
@@ -27,6 +27,6 @@
 </head>
 <body>
   <h1>Página sobre</h1>
-  <a href="./index.html"><input class="btn" type="button" value="voltar" ></a>
+  <a href="index.html"><input class="btn" type="button" value="voltar" ></a>
 </body>
 </html>
